<resources>
    <string name="app_name">super_market</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="don_t_have_an_account_register_here">Don\'t have an account? Register here.</string>
    <string name="signup">Signup</string>
    <string name="already_have_account_login">Already have account? login</string>
    <string name="name">name</string>
    <string name="get_started">Get Started</string>
    <string name="proudcts">Proudcts</string>
    <string name="see_all">see all</string>
</resources>