<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">


    <ImageView
        android:id="@+id/imageViewLogo"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="30dp"
        android:importantForAccessibility="no"
        android:src="@drawable/img" />

    <EditText
        android:id="@+id/emailET"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/imageViewLogo"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="25dp"
        tools:ignore="Autofill" />

    <EditText
        android:id="@+id/nameET"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/emailET"
        android:hint="@string/name"
        android:inputType="textPersonName"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="25dp"
        tools:ignore="Autofill" />
    <EditText
        android:id="@+id/passwordET"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:layout_below="@id/nameET"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="25dp"
        tools:ignore="Autofill" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/signupBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/passwordET"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="25dp"
        android:background="@color/green"
        android:text="@string/signup" />

    <TextView
        android:id="@+id/goToLoginT"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/already_have_account_login"
        android:gravity="center"
        android:clickable="true"
        android:layout_below="@id/signupBtn"
        android:textColor="#FF4081"
        android:textStyle="bold"
        android:textSize="16sp"
        android:layout_marginBottom="16dp"/>

</RelativeLayout>
